--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="paged.js"></script>
+	<script src="paged.polyfill.js"></script>
 	<title>jason</title>
 </head>
 
