--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	Hacker News new | threads | past | comments | ask | show | jobs | submit	Abhinav2000 (54) | logout
+	<p>
+		Hacker News new | threads | past | comments | ask | show | jobs | submit	Abhinav2000 (54) | logout
 Wkhtmltopdf: Command line tools to render HTML into PDF (wkhtmltopdf.org)
 129 points by polm23 1 day ago | flag | hide | past | favorite | 91 comments
  
@@ -543,7 +544,7 @@ reply
 
 Guidelines | FAQ | Lists | API | Security | Legal | Apply to YC | Contact
 
-Search:  
+Search:  </p>
 </body>
 
 </html>
