--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 <body>
 <div class="cover-page">
-SHM ABCD
+	<h1>Beautiful PDFs from HTML</h1>
+	<h2>An introductory guide by Ashok Khanna</h2>
+	<p>March 2021</p>
 </div>
 <div class="page-break"></div>
 
