--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <div class="cover-page">
 	<h1>Beautiful PDFs from HTML</h1>
-	<h2>An introductory guide by Ashok Khanna</h2>
-	<p>March 2021</p>
+	<h3>An introductory guide by Ashok Khanna</h3>
+	<h3>March 2021</h3>
 </div>
 <div class="page-break"></div>
 
