--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </div>
 <div class="page-break"></div>
 
+<main>
 	<p>
 		Hacker News new | threads | past | comments | ask | show | jobs | submit	Abhinav2000 (54) | logout
 Wkhtmltopdf: Command line tools to render HTML into PDF (wkhtmltopdf.org)
@@ -552,6 +553,8 @@ reply
 Guidelines | FAQ | Lists | API | Security | Legal | Apply to YC | Contact
 
 Search:  </p>
+</main>
+	
 </body>
 
 </html>
