--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+
+<div class="disclaimer">Distributed under the MIT License</div>
 <div class="cover-page">
 	<h1>Beautiful PDFs from HTML</h1>
 	<h3>An introductory guide by Ashok Khanna</h3>
