--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 	<h3>An introductory guide by Ashok Khanna</h3>
 	<h3>March 2021</h3>
 </div>
-<div class="footer">Updated 28-03-2021</div>
+
+<!-- Place after cover page to avoid incorrect generation of footer
+	on page before cover page -->
+<p class="footer">Updated 28-03-2021</p>
 <div class="counter-reset"></div>
 
 
