--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 <p class="footer">Updated 28-03-2021</p>
 <div class="counter-reset"></div>
 
+<h2>Section 1. Getting Started</h2>
+<p>ABCD</p>
+
+<h2>Section 2. Page Breaks</h2>
 
 
 <main>
