--- a/index.html
+++ b/index.html
@@ -20,6 +20,143 @@
 <div class="counter-reset"></div>
 
 <h2>Section 1. Getting Started</h2>
+<h3>Media Queries</h3>
+<p>SigmundA 23 hours ago [–]
+
+Wkhtmltopdf is based on QtWebkit which is long deprecated. There was work to move it QtWebEngine but doesn't seem to be going anywhere: https://wkhtmltopdf.org/status.html
+In the meantime Chrome added headless support and with command line or puppeteer you can do the same thing with a much newer and more secure engine.
+However if you need full CSS-Paged support then PrinceXML is probably your only option and its not cheap: https://www.princexml.com
+reply
+	
+ognarb 21 hours ago [–]
+
+Instead of princexml, there is an open source alternative: https://www.pagedjs.org/. I saw a demo in 2019 at the libregraphicsmeeting and it was really nice and worked well for most browser already. It probably improved since then.
+reply
+	
+blowski 23 hours ago [–]
+
+Despite have a deprecated dependency, is there any issue using wkhtmltopdf? I'm running it in quite a few projects to generate letters and invoices, and not experiencing any issues.
+reply
+	</p>
+	<h3>Hello test</h3>
+
+	<p>SigmundA 23 hours ago [–]
+
+Wkhtmltopdf is based on QtWebkit which is long deprecated. There was work to move it QtWebEngine but doesn't seem to be going anywhere: https://wkhtmltopdf.org/status.html
+In the meantime Chrome added headless support and with command line or puppeteer you can do the same thing with a much newer and more secure engine.
+However if you need full CSS-Paged support then PrinceXML is probably your only option and its not cheap: https://www.princexml.com
+reply
+	
+ognarb 21 hours ago [–]
+
+Instead of princexml, there is an open source alternative: https://www.pagedjs.org/. I saw a demo in 2019 at the libregraphicsmeeting and it was really nice and worked well for most browser already. It probably improved since then.
+reply
+	
+blowski 23 hours ago [–]
+
+Despite have a deprecated dependency, is there any issue using wkhtmltopdf? I'm running it in quite a few projects to generate letters and invoices, and not experiencing any issues.
+reply
+	SigmundA 23 hours ago [–]
+
+Wkhtmltopdf is based on QtWebkit which is long deprecated. There was work to move it QtWebEngine but doesn't seem to be going anywhere: https://wkhtmltopdf.org/status.html
+In the meantime Chrome added headless support and with command line or puppeteer you can do the same thing with a much newer and more secure engine.
+However if you need full CSS-Paged support then PrinceXML is probably your only option and its not cheap: https://www.princexml.com
+reply
+	
+ognarb 21 hours ago [–]
+
+Instead of princexml, there is an open source alternative: https://www.pagedjs.org/. I saw a demo in 2019 at the libregraphicsmeeting and it was really nice and worked well for most browser already. It probably improved since then.
+reply
+	
+blowski 23 hours ago [–]
+
+Despite have a deprecated dependency, is there any issue using wkhtmltopdf? I'm running it in quite a few projects to generate letters and invoices, and not experiencing any issues.
+reply
+	SigmundA 23 hours ago [–]
+
+Wkhtmltopdf is based on QtWebkit which is long deprecated. There was work to move it QtWebEngine but doesn't seem to be going anywhere: https://wkhtmltopdf.org/status.html
+In the meantime Chrome added headless support and with command line or puppeteer you can do the same thing with a much newer and more secure engine.
+However if you need full CSS-Paged support then PrinceXML is probably your only option and its not cheap: https://www.princexml.com
+reply
+	
+ognarb 21 hours ago [–]
+
+Instead of princexml, there is an open source alternative: https://www.pagedjs.org/. I saw a demo in 2019 at the libregraphicsmeeting and it was really nice and worked well for most browser already. It probably improved since then.
+reply
+	
+blowski 23 hours ago [–]
+
+Despite have a deprecated dependency, is there any issue using wkhtmltopdf? I'm running it in quite a few projects to generate letters and invoices, and not experiencing any issues.
+reply
+	SigmundA 23 hours ago [–]
+
+Wkhtmltopdf is based on QtWebkit which is long deprecated. There was work to move it QtWebEngine but doesn't seem to be going anywhere: https://wkhtmltopdf.org/status.html
+In the meantime Chrome added headless support and with command line or puppeteer you can do the same thing with a much newer and more secure engine.
+However if you need full CSS-Paged support then PrinceXML is probably your only option and its not cheap: https://www.princexml.com
+reply
+	
+ognarb 21 hours ago [–]
+
+Instead of princexml, there is an open source alternative: https://www.pagedjs.org/. I saw a demo in 2019 at the libregraphicsmeeting and it was really nice and worked well for most browser already. It probably improved since then.
+reply
+	
+blowski 23 hours ago [–]
+
+Despite have a deprecated dependency, is there any issue using wkhtmltopdf? I'm running it in quite a few projects to generate letters and invoices, and not experiencing any issues.
+reply
+	</p>
+
+<h2>test</h2>
+<h3>asdf</h3>
+<p>SigmundA 23 hours ago [–]
+
+Wkhtmltopdf is based on QtWebkit which is long deprecated. There was work to move it QtWebEngine but doesn't seem to be going anywhere: https://wkhtmltopdf.org/status.html
+In the meantime Chrome added headless support and with command line or puppeteer you can do the same thing with a much newer and more secure engine.
+However if you need full CSS-Paged support then PrinceXML is probably your only option and its not cheap: https://www.princexml.com
+reply
+	
+ognarb 21 hours ago [–]
+
+Instead of princexml, there is an open source alternative: https://www.pagedjs.org/. I saw a demo in 2019 at the libregraphicsmeeting and it was really nice and worked well for most browser already. It probably improved since then.
+reply
+	
+blowski 23 hours ago [–]
+
+Despite have a deprecated dependency, is there any issue using wkhtmltopdf? I'm running it in quite a few projects to generate letters and invoices, and not experiencing any issues.
+reply
+	SigmundA 23 hours ago [–]
+
+Wkhtmltopdf is based on QtWebkit which is long deprecated. There was work to move it QtWebEngine but doesn't seem to be going anywhere: https://wkhtmltopdf.org/status.html
+In the meantime Chrome added headless support and with command line or puppeteer you can do the same thing with a much newer and more secure engine.
+However if you need full CSS-Paged support then PrinceXML is probably your only option and its not cheap: https://www.princexml.com
+reply
+	
+ognarb 21 hours ago [–]
+
+Instead of princexml, there is an open source alternative: https://www.pagedjs.org/. I saw a demo in 2019 at the libregraphicsmeeting and it was really nice and worked well for most browser already. It probably improved since then.
+reply
+	
+blowski 23 hours ago [–]
+
+Despite have a deprecated dependency, is there any issue using wkhtmltopdf? I'm running it in quite a few projects to generate letters and invoices, and not experiencing any issues.
+reply
+	SigmundA 23 hours ago [–]
+
+Wkhtmltopdf is based on QtWebkit which is long deprecated. There was work to move it QtWebEngine but doesn't seem to be going anywhere: https://wkhtmltopdf.org/status.html
+In the meantime Chrome added headless support and with command line or puppeteer you can do the same thing with a much newer and more secure engine.
+However if you need full CSS-Paged support then PrinceXML is probably your only option and its not cheap: https://www.princexml.com
+reply
+	
+ognarb 21 hours ago [–]
+
+Instead of princexml, there is an open source alternative: https://www.pagedjs.org/. I saw a demo in 2019 at the libregraphicsmeeting and it was really nice and worked well for most browser already. It probably improved since then.
+reply
+	
+blowski 23 hours ago [–]
+
+Despite have a deprecated dependency, is there any issue using wkhtmltopdf? I'm running it in quite a few projects to generate letters and invoices, and not experiencing any issues.
+reply
+	</p>
 <p>ABCD</p>
 
 <h2>Section 2. Page Breaks</h2>
