--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 	<h3>March 2021</h3>
 </div>
 
+<ul id="toc">
+</ul>
+
 <!-- Place after cover page to avoid incorrect generation of footer
 	on page before cover page -->
 <p class="footer">Updated 28-03-2021</p>
