--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		    beforeParsed(content){          
 		      createToc({
 		        content: content,
-		        tocElement: '#my-toc-content',
+		        tocElement: '#toc',
 		        titleElements: [ '.mw-content-ltr h2', 'h3' ]
 		      });
 		    }
