--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
 
 <body>
 
+
+<!-- We use the "cover-page" class for our cover page
+	Refer style.css for its style rules -->
+
 <div class="cover-page">
 	<h1>Beautiful PDFs from HTML</h1>
-	<h3>An introductory guide by Ashok Khanna</h3>
+	<h3>An Example Repo by Ashok Khanna</h3>
 	<h3>March 2021</h3>
 </div>
 
