--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		    		// TOC inserted into element with id toc (refer below HTML):
 		    		tocElement: '#toc',
 
-		    		
+
 		    		titleElements: [ '.mw-content-ltr h2', 'h3' ]
 		    	});
 			}
@@ -56,7 +56,7 @@
 
 <!-- Place after cover page to avoid incorrect generation of footer
 	on page before cover page -->
-<p class="footer">Updated 28-03-2021</p>
+<p class="footer">All rights of this document belong to paged.js</p>
 <div class="counter-reset"></div>
 
 <h2>Section 1. Getting Started</h2>
