--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <!-- Place after cover page to avoid incorrect generation of footer
 	on page before cover page -->
-<p class="footer">All rights of this document belong to paged.js</p>
+<p class="footer">Most of this is copy/paste from paged.js</p>
 <div class="counter-reset"></div>
 
 <h2>Section 1. Getting Started</h2>
