--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p class="footer">Most of this is copy/paste from paged.js</p>
 <div class="counter-reset"></div>
 
-<h2>Section 1. Getting Started</h2>
+<h2 class="no-break">Section 1. Getting Started</h2>
 <h3>Media Queries</h3>
 <p>SigmundA 23 hours ago [–]
 
