--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div class="cover-page">
 	<h1>Beautiful PDFs from HTML</h1>
-	<h3>An Example Repo by Ashok Khanna</h3>
+	<h2 class="no-counter">An Example Repo by Ashok Khanna</h2>
 	<h3>March 2021</h3>
 </div>
 
