--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 <div class="cover-page">
 	<h1>Beautiful PDFs from HTML</h1>
-	<h2 class="no-counter no-break">An Example Repo by Ashok Khanna</h2>
-	<h3>March 2021</h3>
+	<h3 class="no-counter">An Example Repo by Ashok Khanna</h3>
+	<h3 class="no-counter">March 2021</h3>
 </div>
 
 <!-- As class "cover-page" uses a custom page rule,
