--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		    		tocElement: '#toc',
 
 
-		    		titleElements: [ '.mw-content-ltr h2', 'h3' ]
+		    		titleElements: [ 'h2', 'h3' ]
 		    	});
 			}
 		  }
