--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		    		tocElement: '#toc',
 
 
-		    		titleElements: [ 'h2:not(cover-header)', 'h3:not(cover-header)' ]
+		    		titleElements: [ 'h2:not(.cover-header)', 'h3:not(.cover-header)' ]
 		    	});
 			}
 		  }
