--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Paged.Js Tutorial</title>
+	<title>Beautiful PDFs from HTML</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="toc.js"></script>
 	<script src="paged.polyfill.js"></script>
@@ -60,6 +60,8 @@
 <div class="counter-reset"></div>
 
 <h2 class="no-break">Getting Started</h2>
+<p>HTML and CSS are <i>beautiful</i> languages, and to me, one of the landmark achievements of collaboration and the open web. Together, they allow you to create beautifully typeset digital content that can be viewed on any device, without any special software or paid licenses.</p>
+<p>The world wide web, however, was designed for scrolling content, and not paginated media (by which I mean discrete pages like physical paper or virtually in pdf). There remains a place for paginated media, indeed there is something comforting and homely from a consistent layout of A4 (or US Letter), and in my belief, certainly reducing the cognitive tax when consuming new content.</p>
 <h3>Media Queries</h3>
 <p>SigmundA 23 hours ago [–]
 
