--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <p>A <a href="https://news.ycombinator.com/item?id=26578826">happenstance discussion</a> on HackerNews brought my attention to <a href="https://www.pagedjs.org">paged.js</a>, a genius idea to polyfill the required capabilities to allow browsers to natively handle paged media, without having to build the whole rendering engine from scratch.</p>
 <p>This guide provides a basic tutorial to using paged.js, for my own future reference and yours, and I highly recommend you visiting their site and supporting their project. In particular, their <a href="https://www.pagedjs.org/documentation/05-designing-for-print/">documentation</a> covers many aspects of advanced paged media and is a worthwhile next step after reading this guide.</p>
 
-<h2 class="no-break">Getting Started</h2>
+<h2>Getting Started</h2>
 
 <h3>Media Queries</h3>
 <p>SigmundA 23 hours ago [–]
