--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- Table of Contents (refer .table-of-contents in style.css) -->
 
 <div class="table-of-contents">
-	<h1>Table of Contents</h1>
+	<h1 class="toc-header">Table of Contents</h1>
 	<ol id="toc"><!-- Our toc.js script will automatically insert
 		the table of content entries into this element --></ol>
 </div>
