--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 <p>Before we begin, I want to quickly introduce you to <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries">media queries</a>. Media queries allow us to modify the stylesheet associated with our website depending on whether it is viewed on screen or for print (e.g. when printing to pdf or paper)  and allow us to set different style sheets for print, screen and mobile.</p>
 <p>
 For example, if you want your print stylesheets to only take effect when the page is printed, and have a different set of stylesheets for normal web viewing, you could do something like the following:</p>
+
+<p>For the rest of this guide and the example repo, we will not make use of media queries. But please do remember them and use them to create distinct views for screen, print and mobile based on your requirements. They are a central component of <a href="https://en.wikipedia.org/wiki/Responsive_web_design">responsive web design</a>.</p>
 	<h3>Hello test</h3>
 
 	<p>SigmundA 23 hours ago [–]
