--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <p>
 For example, if you want your print stylesheets to only take effect when the page is printed, and have a different set of stylesheets for normal web viewing, you could do something like the following:</p>
 
-<p>For the rest of this guide and the example repo, we will not make use of media queries. But please do remember them and use them to create distinct views for screen, print and mobile based on your requirements. They are a central component of <a href="https://en.wikipedia.org/wiki/Responsive_web_design">responsive web design</a>.</p>
+<p>For the rest of this guide and the example repo, we will not make use of media queries. But please do remember them and use them to create distinct views for screen, print and mobile based on your requirements. They are a central component of <a href="https://en.wikipedia.org/wiki/Responsive_web_design">responsive web design</a>, a topic we could dedicate an entire book to, but one that is not as relevant for pdf generation (as we know exactly in advance the dimensions our content will be viewed in).</p>
 	<h3>Hello test</h3>
 
 	<p>SigmundA 23 hours ago [–]
