--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ reply
 <h3>MathJax Library</h3>
 <p>MathJax is a high quality, popular library for rendering Math on the web.</p>
 
+$$ \alpha  = x/y $$
 
 <div class="page-break"></div>
 	
