--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ reply
 <div class="math">
 <p>MathJax is a high quality, popular library for rendering Math on the web.</p>
 
-$$ \alpha  = x/y $$
+\(\alpha \cap \beta = 3\)
 </div>
 
 <div class="page-break"></div>
