--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ h3:not(.no-counter)::before {
 }
 
 figcaption:not(.no-counter)::before {
-	content: counter(sectionNumber) "." counter(figureNumber) " ";
+	content: "Figure " counter(sectionNumber) "." counter(figureNumber) " ";
 }
 </pre></code>
 </figure>
