--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <figure>
 	<figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
-  <code><pre>
+  <code class="language-css"><pre>
 @media print {
     .sidebar {
         display: none;
