--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 
 <figure>
 	<figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
-  <code class="language-css"><pre>
+  <pre><code class="language-css">
 @media print {
     .sidebar {
         display: none;
     }
 }
-</pre></code>
+</code></pre>
 </figure>
 
 
